[tool.poetry]
name = "kms-ext"
version = "0.0.1"
description = "`kms-ext` is a Meltano utility extension."
authors = ["Ken Payne"]
license = "Apache 2.0"
packages = [
    { include = "kms_ext" }
]

[tool.poetry.dependencies]
python = "<3.11,>=3.7"
structlog = "^22.3.0"
PyYAML = "^6.0.0"
pydantic = "^1.9.0"
click = "^8.1.3"
typer = "^0.6.1"
"meltano.edk"= {git = "https://github.com/meltano/edk.git", rev="main"}
cryptography = "^38.0.3"
pydantic-yaml = "^0.8.1"
python-dotenv = "^0.21.0"
boto3 = "^1.26.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kms = 'kms_ext.main:app'
